--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ docker/windows/windows.mac
 docker/windows/windows.rom
 docker/windows/windows.vars
 docker/windows/windows.ver
+scripts/package-installation.ps1
