--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -16,6 +16,6 @@ services:
       - 3389:3389/tcp
       - 3389:3389/udp
     volumes:
-      - ./windows:/storage
+      - ./Win11_25H2_EnglishInternational_x64.iso:/boot.iso
     restart: always
     stop_grace_period: 2m
